clientlib_versioned_docs/version-0.14.0/api/modules/_typings_.md
---
id: "_typings_"
title: "Module: typings"
sidebar_label: "typings"
---

## Index

### Enumerations

* [FeePayer](../enums/_typings_.feepayer.md)
* [NonceMechanism](../enums/_typings_.noncemechanism.md)
* [TransactionStatus](../enums/_typings_.transactionstatus.md)

### Interfaces

* [AccruedInterestsObject](../interfaces/_typings_.accruedinterestsobject.md)
* [AccruedInterestsRaw](../interfaces/_typings_.accruedinterestsraw.md)
* [Amount](../interfaces/_typings_.amount.md)
* [AmountInternal](../interfaces/_typings_.amountinternal.md)
* [BlockchainEvent](../interfaces/_typings_.blockchainevent.md)
* [ClosePathObject](../interfaces/_typings_.closepathobject.md)
* [ClosePathRaw](../interfaces/_typings_.closepathraw.md)
* [CloseTxObject](../interfaces/_typings_.closetxobject.md)
* [DecimalsMap](../interfaces/_typings_.decimalsmap.md)
* [DecimalsObject](../interfaces/_typings_.decimalsobject.md)
* [DecimalsOptions](../interfaces/_typings_.decimalsoptions.md)
* [DelegationFeesInternal](../interfaces/_typings_.delegationfeesinternal.md)
* [DelegationFeesObject](../interfaces/_typings_.delegationfeesobject.md)
* [DelegationFeesRaw](../interfaces/_typings_.delegationfeesraw.md)
* [DeployIdentityResponse](../interfaces/_typings_.deployidentityresponse.md)
* [ECSignature](../interfaces/_typings_.ecsignature.md)
* [EarnedMediationFeesListObject](../interfaces/_typings_.earnedmediationfeeslistobject.md)
* [EarnedMediationFeesListRaw](../interfaces/_typings_.earnedmediationfeeslistraw.md)
* [EthersWalletData](../interfaces/_typings_.etherswalletdata.md)
* [EventFilterOptions](../interfaces/_typings_.eventfilteroptions.md)
* [ExchangeCancelEvent](../interfaces/_typings_.exchangecancelevent.md)
* [ExchangeCancelEventRaw](../interfaces/_typings_.exchangecanceleventraw.md)
* [ExchangeEvent](../interfaces/_typings_.exchangeevent.md)
* [ExchangeFillEvent](../interfaces/_typings_.exchangefillevent.md)
* [ExchangeFillEventRaw](../interfaces/_typings_.exchangefilleventraw.md)
* [ExchangeOptions](../interfaces/_typings_.exchangeoptions.md)
* [ExchangeTx](../interfaces/_typings_.exchangetx.md)
* [FeesRequest](../interfaces/_typings_.feesrequest.md)
* [FeesResponse](../interfaces/_typings_.feesresponse.md)
* [IdentityWalletData](../interfaces/_typings_.identitywalletdata.md)
* [MediationFeeObject](../interfaces/_typings_.mediationfeeobject.md)
* [MediationFeeRaw](../interfaces/_typings_.mediationfeeraw.md)
* [MetaTransaction](../interfaces/_typings_.metatransaction.md)
* [MetaTransactionFees](../interfaces/_typings_.metatransactionfees.md)
* [MetaTransactionStatus](../interfaces/_typings_.metatransactionstatus.md)
* [Network](../interfaces/_typings_.network.md)
* [NetworkDetails](../interfaces/_typings_.networkdetails.md)
* [NetworkDetailsRaw](../interfaces/_typings_.networkdetailsraw.md)
* [NetworkEvent](../interfaces/_typings_.networkevent.md)
* [NetworkTransferEvent](../interfaces/_typings_.networktransferevent.md)
* [NetworkTransferEventRaw](../interfaces/_typings_.networktransfereventraw.md)
* [NetworkTrustlineBalanceUpdate](../interfaces/_typings_.networktrustlinebalanceupdate.md)
* [NetworkTrustlineBalanceUpdateRaw](../interfaces/_typings_.networktrustlinebalanceupdateraw.md)
* [NetworkTrustlineUpdateEvent](../interfaces/_typings_.networktrustlineupdateevent.md)
* [NetworkTrustlineUpdateEventRaw](../interfaces/_typings_.networktrustlineupdateeventraw.md)
* [Order](../interfaces/_typings_.order.md)
* [OrderOptions](../interfaces/_typings_.orderoptions.md)
* [OrderRaw](../interfaces/_typings_.orderraw.md)
* [Orderbook](../interfaces/_typings_.orderbook.md)
* [OrderbookOptions](../interfaces/_typings_.orderbookoptions.md)
* [OrderbookRaw](../interfaces/_typings_.orderbookraw.md)
* [OrdersQuery](../interfaces/_typings_.ordersquery.md)
* [PaidDelegationFeesRaw](../interfaces/_typings_.paiddelegationfeesraw.md)
* [PathObject](../interfaces/_typings_.pathobject.md)
* [PathRaw](../interfaces/_typings_.pathraw.md)
* [PaymentMessage](../interfaces/_typings_.paymentmessage.md)
* [PaymentOptions](../interfaces/_typings_.paymentoptions.md)
* [PaymentRequestDeclineMessage](../interfaces/_typings_.paymentrequestdeclinemessage.md)
* [PaymentRequestMessage](../interfaces/_typings_.paymentrequestmessage.md)
* [PaymentTxObject](../interfaces/_typings_.paymenttxobject.md)
* [ProviderUrl](../interfaces/_typings_.providerurl.md)
* [RawTxObject](../interfaces/_typings_.rawtxobject.md)
* [Signature](../interfaces/_typings_.signature.md)
* [SignedOrder](../interfaces/_typings_.signedorder.md)
* [SignedOrderRaw](../interfaces/_typings_.signedorderraw.md)
* [SigningKey](../interfaces/_typings_.signingkey.md)
* [TLEvent](../interfaces/_typings_.tlevent.md)
* [TLNetworkConfig](../interfaces/_typings_.tlnetworkconfig.md)
* [TLWalletData](../interfaces/_typings_.tlwalletdata.md)
* [TLWalletDataMeta](../interfaces/_typings_.tlwalletdatameta.md)
* [TokenAmountEvent](../interfaces/_typings_.tokenamountevent.md)
* [TokenAmountEventRaw](../interfaces/_typings_.tokenamounteventraw.md)
* [TokenEvent](../interfaces/_typings_.tokenevent.md)
* [TransactionStatusObject](../interfaces/_typings_.transactionstatusobject.md)
* [TransferDetails](../interfaces/_typings_.transferdetails.md)
* [TransferDetailsRaw](../interfaces/_typings_.transferdetailsraw.md)
* [TransferIdentifier](../interfaces/_typings_.transferidentifier.md)
* [TrustlineAccruedInterestsObject](../interfaces/_typings_.trustlineaccruedinterestsobject.md)
* [TrustlineAccruedInterestsRaw](../interfaces/_typings_.trustlineaccruedinterestsraw.md)
* [TrustlineObject](../interfaces/_typings_.trustlineobject.md)
* [TrustlineRaw](../interfaces/_typings_.trustlineraw.md)
* [TrustlineUpdateOptions](../interfaces/_typings_.trustlineupdateoptions.md)
* [TxFeesAmounts](../interfaces/_typings_.txfeesamounts.md)
* [TxFeesRaw](../interfaces/_typings_.txfeesraw.md)
* [TxInfos](../interfaces/_typings_.txinfos.md)
* [TxInfosRaw](../interfaces/_typings_.txinfosraw.md)
* [TxObject](../interfaces/_typings_.txobject.md)
* [TxObjectInternal](../interfaces/_typings_.txobjectinternal.md)
* [TxObjectRaw](../interfaces/_typings_.txobjectraw.md)
* [TxOptions](../interfaces/_typings_.txoptions.md)
* [TxOptionsInternal](../interfaces/_typings_.txoptionsinternal.md)
* [UserOverview](../interfaces/_typings_.useroverview.md)
* [UserOverviewRaw](../interfaces/_typings_.useroverviewraw.md)
* [UsernameMessage](../interfaces/_typings_.usernamemessage.md)
* [Web3Log](../interfaces/_typings_.web3log.md)
* [Web3TxReceipt](../interfaces/_typings_.web3txreceipt.md)

### Type aliases

* [AmountEventRaw](_typings_.md#amounteventraw)
* [AnyEvent](_typings_.md#anyevent)
* [AnyEventRaw](_typings_.md#anyeventraw)
* [AnyExchangeEvent](_typings_.md#anyexchangeevent)
* [AnyExchangeEventRaw](_typings_.md#anyexchangeeventraw)
* [AnyNetworkEvent](_typings_.md#anynetworkevent)
* [AnyNetworkEventRaw](_typings_.md#anynetworkeventraw)
* [AnyNetworkTrustlineEvent](_typings_.md#anynetworktrustlineevent)
* [AnyNetworkTrustlineEventRaw](_typings_.md#anynetworktrustlineeventraw)
* [AnyOrder](_typings_.md#anyorder)
* [AnyTokenEvent](_typings_.md#anytokenevent)
* [AnyTokenEventRaw](_typings_.md#anytokeneventraw)
* [Direction](_typings_.md#direction)
* [ExchangeTxOptions](_typings_.md#exchangetxoptions)
* [NetworkTrustlineCancelEvent](_typings_.md#networktrustlinecancelevent)
* [NetworkTrustlineCancelEventRaw](_typings_.md#networktrustlinecanceleventraw)
* [ReconnectingWSOptions](_typings_.md#reconnectingwsoptions)
* [TLOptions](_typings_.md#tloptions)
* [UserAccruedInterestsObject](_typings_.md#useraccruedinterestsobject)
* [UserAccruedInterestsRaw](_typings_.md#useraccruedinterestsraw)
* [WalletType](_typings_.md#wallettype)
* [WalletTypeEthers](_typings_.md#wallettypeethers)
* [WalletTypeIdentity](_typings_.md#wallettypeidentity)

### Functions

* [isFeePayerValue](_typings_.md#isfeepayervalue)

## Type aliases

### AmountEventRaw

Ƭ  **AmountEventRaw**: [NetworkTransferEventRaw](../interfaces/_typings_.networktransfereventraw.md) \| [TokenAmountEventRaw](../interfaces/_typings_.tokenamounteventraw.md)

*Defined in [src/typings.ts:279](https://github.com/trustlines-protocol/clientlib/blob/4830efe/src/typings.ts#L279)*

___

### AnyEvent

Ƭ  **AnyEvent**: [AnyNetworkEvent](_typings_.md#anynetworkevent) \| [AnyTokenEvent](_typings_.md#anytokenevent) \| [AnyExchangeEvent](_typings_.md#anyexchangeevent)

*Defined in [src/typings.ts:274](https://github.com/trustlines-protocol/clientlib/blob/4830efe/src/typings.ts#L274)*

___

### AnyEventRaw

Ƭ  **AnyEventRaw**: [AnyNetworkEventRaw](_typings_.md#anynetworkeventraw) \| [AnyTokenEventRaw](_typings_.md#anytokeneventraw) \| [AnyExchangeEventRaw](_typings_.md#anyexchangeeventraw)

*Defined in [src/typings.ts:275](https://github.com/trustlines-protocol/clientlib/blob/4830efe/src/typings.ts#L275)*

___

### AnyExchangeEvent

Ƭ  **AnyExchangeEvent**: [ExchangeFillEvent](../interfaces/_typings_.exchangefillevent.md) \| [ExchangeCancelEvent](../interfaces/_typings_.exchangecancelevent.md)

*Defined in [src/typings.ts:271](https://github.com/trustlines-protocol/clientlib/blob/4830efe/src/typings.ts#L271)*

___

### AnyExchangeEventRaw

Ƭ  **AnyExchangeEventRaw**: [ExchangeFillEventRaw](../interfaces/_typings_.exchangefilleventraw.md) \| [ExchangeCancelEventRaw](../interfaces/_typings_.exchangecanceleventraw.md)

*Defined in [src/typings.ts:272](https://github.com/trustlines-protocol/clientlib/blob/4830efe/src/typings.ts#L272)*

___

### AnyNetworkEvent

Ƭ  **AnyNetworkEvent**: [NetworkTransferEvent](../interfaces/_typings_.networktransferevent.md) \| [NetworkTrustlineUpdateEvent](../interfaces/_typings_.networktrustlineupdateevent.md) \| [NetworkTrustlineCancelEvent](_typings_.md#networktrustlinecancelevent)

*Defined in [src/typings.ts:176](https://github.com/trustlines-protocol/clientlib/blob/4830efe/src/typings.ts#L176)*

___

### AnyNetworkEventRaw

Ƭ  **AnyNetworkEventRaw**: [NetworkTransferEventRaw](../interfaces/_typings_.networktransfereventraw.md) \| [NetworkTrustlineUpdateEventRaw](../interfaces/_typings_.networktrustlineupdateeventraw.md) \| [NetworkTrustlineCancelEventRaw](_typings_.md#networktrustlinecanceleventraw)

*Defined in [src/typings.ts:180](https://github.com/trustlines-protocol/clientlib/blob/4830efe/src/typings.ts#L180)*

___

### AnyNetworkTrustlineEvent

Ƭ  **AnyNetworkTrustlineEvent**: [NetworkTrustlineUpdateEvent](../interfaces/_typings_.networktrustlineupdateevent.md) \| [NetworkTrustlineCancelEvent](_typings_.md#networktrustlinecancelevent) \| [NetworkTrustlineBalanceUpdate](../interfaces/_typings_.networktrustlinebalanceupdate.md)

*Defined in [src/typings.ts:190](https://github.com/trustlines-protocol/clientlib/blob/4830efe/src/typings.ts#L190)*

___

### AnyNetworkTrustlineEventRaw

Ƭ  **AnyNetworkTrustlineEventRaw**: [NetworkTrustlineUpdateEventRaw](../interfaces/_typings_.networktrustlineupdateeventraw.md) \| [NetworkTrustlineCancelEventRaw](_typings_.md#networktrustlinecanceleventraw) \| [NetworkTrustlineBalanceUpdateRaw](../interfaces/_typings_.networktrustlinebalanceupdateraw.md)

*Defined in [src/typings.ts:185](https://github.com/trustlines-protocol/clientlib/blob/4830efe/src/typings.ts#L185)*

___

### AnyOrder

Ƭ  **AnyOrder**: [Order](../interfaces/_typings_.order.md) \| [OrderRaw](../interfaces/_typings_.orderraw.md) \| [SignedOrder](../interfaces/_typings_.signedorder.md) \| [SignedOrderRaw](../interfaces/_typings_.signedorderraw.md)

*Defined in [src/typings.ts:822](https://github.com/trustlines-protocol/clientlib/blob/4830efe/src/typings.ts#L822)*

___

### AnyTokenEvent

Ƭ  **AnyTokenEvent**: [TokenAmountEvent](../interfaces/_typings_.tokenamountevent.md)

*Defined in [src/typings.ts:207](https://github.com/trustlines-protocol/clientlib/blob/4830efe/src/typings.ts#L207)*

___

### AnyTokenEventRaw

Ƭ  **AnyTokenEventRaw**: [TokenAmountEventRaw](../interfaces/_typings_.tokenamounteventraw.md)

*Defined in [src/typings.ts:208](https://github.com/trustlines-protocol/clientlib/blob/4830efe/src/typings.ts#L208)*

___

### Direction

Ƭ  **Direction**: &#34;sent&#34; \| &#34;received&#34;

*Defined in [src/typings.ts:242](https://github.com/trustlines-protocol/clientlib/blob/4830efe/src/typings.ts#L242)*

___

### ExchangeTxOptions

Ƭ  **ExchangeTxOptions**: [TxOptions](../interfaces/_typings_.txoptions.md) & [ExchangeOptions](../interfaces/_typings_.exchangeoptions.md)

*Defined in [src/typings.ts:848](https://github.com/trustlines-protocol/clientlib/blob/4830efe/src/typings.ts#L848)*

___

### NetworkTrustlineCancelEvent

Ƭ  **NetworkTrustlineCancelEvent**: [NetworkEvent](../interfaces/_typings_.networkevent.md)

*Defined in [src/typings.ts:167](https://github.com/trustlines-protocol/clientlib/blob/4830efe/src/typings.ts#L167)*

___

### NetworkTrustlineCancelEventRaw

Ƭ  **NetworkTrustlineCancelEventRaw**: [NetworkEvent](../interfaces/_typings_.networkevent.md)

*Defined in [src/typings.ts:166](https://github.com/trustlines-protocol/clientlib/blob/4830efe/src/typings.ts#L166)*

___

### ReconnectingWSOptions

Ƭ  **ReconnectingWSOptions**: ReconnectingOptions & { reconnectOnError?: boolean  }

*Defined in [src/typings.ts:878](https://github.com/trustlines-protocol/clientlib/blob/4830efe/src/typings.ts#L878)*

___

### TLOptions

Ƭ  **TLOptions**: [TxOptions](../interfaces/_typings_.txoptions.md) & [DecimalsOptions](../interfaces/_typings_.decimalsoptions.md)

*Defined in [src/typings.ts:78](https://github.com/trustlines-protocol/clientlib/blob/4830efe/src/typings.ts#L78)*

___

### UserAccruedInterestsObject

Ƭ  **UserAccruedInterestsObject**: [TrustlineAccruedInterestsObject](../interfaces/_typings_.trustlineaccruedinterestsobject.md)[]

*Defined in [src/typings.ts:692](https://github.com/trustlines-protocol/clientlib/blob/4830efe/src/typings.ts#L692)*

___

### UserAccruedInterestsRaw

Ƭ  **UserAccruedInterestsRaw**: [TrustlineAccruedInterestsRaw](../interfaces/_typings_.trustlineaccruedinterestsraw.md)[]

*Defined in [src/typings.ts:691](https://github.com/trustlines-protocol/clientlib/blob/4830efe/src/typings.ts#L691)*

___

### WalletType

Ƭ  **WalletType**: [WalletTypeEthers](_typings_.md#wallettypeethers) \| [WalletTypeIdentity](_typings_.md#wallettypeidentity)

*Defined in [src/typings.ts:566](https://github.com/trustlines-protocol/clientlib/blob/4830efe/src/typings.ts#L566)*

___

### WalletTypeEthers

Ƭ  **WalletTypeEthers**: &#34;ethers&#34;

*Defined in [src/typings.ts:564](https://github.com/trustlines-protocol/clientlib/blob/4830efe/src/typings.ts#L564)*

___

### WalletTypeIdentity

Ƭ  **WalletTypeIdentity**: &#34;identity&#34;

*Defined in [src/typings.ts:565](https://github.com/trustlines-protocol/clientlib/blob/4830efe/src/typings.ts#L565)*

## Functions

### isFeePayerValue

▸ **isFeePayerValue**(`feePayer`: string): boolean

*Defined in [src/typings.ts:467](https://github.com/trustlines-protocol/clientlib/blob/4830efe/src/typings.ts#L467)*

#### Parameters:

Name | Type |
------ | ------ |
`feePayer` | string |

**Returns:** boolean
